improving cacuria text

--- a/index.html
+++ b/index.html
@@ -939,32 +939,71 @@
                                 <img class="img-fluid d-block mx-auto" src="assets/img/projects/cacuria/logo.png"
                                     alt="" />
                                 <p class="text-muted-justified">
-                                    Cacuriá is an authoring tool designed to create educational content (aka learning
-                                    objects) for the Web and Interactive Digital TV environments.
-                                    This project was my M.Sc. research, focused on enabling education professionals to
-                                    create learning objects through an intuitive process, which is designed and crafted
-                                    by the teacher.
-                                    This process is based on educational videos, which will be enriched by the
-                                    professional directly (without the need of a programmer or designer) and also by
-                                    adding multimedia content (image, audio, text etc).
+                                    
+                                    
+                                    During my time as an M.Sc. candidate at LAWS lab. - <a class="link" target="_blank"
+                                    href="https://portalpadrao.ufma.br/site">UFMA</a>, I undertook a significant
+                                    project that formed the basis of my research. This project aimed to support
+                                    instructors in the creation of educational interactive videos. Typically, developing
+                                    such content necessitates a multidisciplinary team, as it can be a complex, costly,
+                                    and time-consuming process. Software developers are required to write the source code,
+                                    designers contribute to the visual identity, education experts formulate and assess
+                                    teaching goals, and at the heart of the team lies the content specialist, often a
+                                    teacher or tutor, who provides the subject matter to be taught.
                                 </p>
                                 <p class="text-muted-justified">
-                                    As the main developer of Cacuriá, I used C++ and the Qt framework to create a tool 
-                                    that can be used on different operating systems, including Ubuntu, MAC OS, and Windows. 
-                                    Figure below presents the current Cacuria's interface used to create and manipulate 
-                                    the content.                                    
+                                    It is interesting to compare this scenario with contemporary content authoring on
+                                    the Web. In the early days, web pages were predominantly constructed by experts
+                                    proficient in markup languages and internet protocols. Over time, the web has
+                                    democratized, leading to the emergence of new roles, like web designers, whose
+                                    primary responsibility is to design and develop web pages. Today, a wide array of
+                                    web content is created by non-developers, such as blogs that can be authored and
+                                    managed by end users with no knowledge of web programming languages. Additionally,
+                                    various users, including journalists and writers, establish profiles on social
+                                    networks containing texts, videos, images, and various multimedia components.
+                                    The facilitation of content authoring on the web for end users is arguably a key
+                                    factor behind its widespread popularity.                                    
                                 </p>
-                                <img class="img-fluid d-block mx-auto" src="assets/img/projects//cacuria/interface.png"
+                                <p class="text-muted-justified">
+                                    Based on this scenario, we developed <a class="link" target="_blank" 
+                                    href="https://www.rnp.br/en/news/gt-voa-implements-cacuria-pilot-and-makes-plans-future">
+                                    Cacuriá</a>, an authoring tool designed for the creation of educational content,
+                                    also known as learning objects, for web and Interactive Digital TV environments.
+                                    This content predominantly centers around educational videos, which can be enriched
+                                    by teachers directly, without the need for a programmer or designer, through the
+                                    addition of multimedia elements like images, audio, and text. Cacuriá was crafted
+                                    by teachers, who played an integral role in each step of the project, ensuring an
+                                    intuitive and user-friendly design.
+                                </p>
+                                <p class="text-muted-justified">
+                                    As the principal developer of Cacuriá, I utilized C++ and the Qt framework to create
+                                    a versatile tool compatible with various operating systems, including Ubuntu, MAC OS,
+                                    and Windows. Figure below presents the current Cacuria's interface drew inspiration
+                                    from popular applications used by teachers, such as Microsoft PowerPoint, making it
+                                    particularly accessible to end users without specific programming knowledge.
+                                </p>
+                                <img class="img-fluid d-block mx-auto" src="assets/img/projects/cacuria/interface.png"
                                     alt="" />
                                 <p class="text-muted-justified">
-                                    One of the most exciting features of Cacuriá is its integration with the iVoD 
-                                    service from <a class="link" target="_blank" href="https://www.rnp.br/">RNP</a>, 
-                                    a National Research and Educational Network responsible for promoting the 
-                                    development of networks in Brazil. RNP is committed to providing innovative 
-                                    applications and services that enhance the learning experience. Cacuriá is a perfect
-                                    example of this commitment, and I am proud to have been a part of its development.
+                                    One of Cacuriá's most exciting features is its integration with the iVoD service from
+                                    <a class="link" target="_blank" href="https://www.rnp.br/">RNP</a>, the National Research
+                                    and Educational Network responsible for advancing network development in Brazil. RNP is
+                                    dedicated to providing innovative applications and services that enhance the learning
+                                    experience, and Cacuriá stands as a shining example of this commitment. I am so proud
+                                    to have been a part of its development.
                                 </p>
-
+                                <p class="text-muted-justified">
+                                    This project had a profound impact on my career as a researcher. After completing my
+                                    M.Sc. degree, I co-founded Mediabox Technologies with a friend. Our company's primary
+                                    focus is to promote Cacuriá in Brazil and provide ongoing maintenance for the tool to
+                                    support RNP. Additionally, we developed Mestrar, an online platform designed to provide
+                                    storage and delivery for students, content created by Cacuriá. The architecture is
+                                    illustrated below. Over two years, our company expanded to include seven more dedicated
+                                    colleagues. Notably, this venture marked my first experience as a manager. This experience
+                                    proved to be a significant challenge and served as my first foray into a leadership role.
+                                </p>
+                                <img class="img-fluid d-block mx-auto" src="assets/img/projects/cacuria/architecture.jpg"
+                                    alt="" />
                                 <ul class="list-inline">
                                     <li>More information:
                                         <a class="link" target="_blank"
