Improving Ginga text

--- a/index.html
+++ b/index.html
@@ -884,6 +884,10 @@
                                 <img class="img-fluid d-block mx-auto" src="assets/img/projects/ginga/logo.png"
                                     alt="" />
                                 <p class="text-muted-justified">
+                                    During my time as a researcher at <a class="link" target="_blank"
+                                    href="http://telemidia.puc-rio.br/">TeleMidia Lab.</a> - <a class="link"
+                                    target="_blank" href="https://www.puc-rio.br/">PUC-Rio</a>, I engaged in 
+                                    a significant project focused on enhancing the Ginga's reference code.
                                     Ginga® is the middleware of the Japanese-Brazilian Digital TV System (ISDB-TB) and
                                     ITU-T Recommendation for IPTV services.
                                     Ginga-NCL Presentation Environment is the required logical subsystem of Ginga,
