fixed Rural Property Valuation text

--- a/index.html
+++ b/index.html
@@ -489,19 +489,43 @@
                                     As the Data Science Manager at <a class="link" target="_blank" href='https://www.seedz.ag/'>Seedz</a>, I led a project focused on rural property valuation. This process involves determining the price of rural properties such as farms and agricultural land, which serves various purposes including securing credit, property insurance, estate division, and property transactions.
                                 </p>
                                 <p class="text-muted-justified">
-                                    To begin our project, we initiated by conducting a comprehensive literature review to gain valuable insights into the field. During this phase, we identified pertinent research papers specifically addressing this issue within the Brazilian context. These papers not only shed light on critical features and methodologies but also illuminated valuable considerations for tackling this complex problem.
+                                    To begin our project, we initiated by conducting a comprehensive literature review to gain valuable
+                                    insights into the field. During this phase, we identified pertinent research papers specifically 
+                                    addressing this issue within the Brazilian context. These papers not only shed light on critical 
+                                    features and methodologies but also illuminated valuable considerations for tackling this complex 
+                                    problem.
                                 </p>
                                 <p class="text-muted-justified">
-                                    Subsequent to the literature review, we proceeded with an extensive exploration of publicly available datasets related to the valuation of bare land. It's important to note that our foremost challenge at this stage was the absence of a comprehensive property price database. To overcome this problem, we implemented a web crawler to extract pricing information and property specifications (e.g., location, area) from real estate listing websites. Furthermore, we conducted geocoding to obtain latitude and longitude coordinates, thereby enriching our dataset with geographic attributes such as terrain and altitude. During the data distribution analysis, we identified a significant data concentration in the Southeast region of Brazil. We implemented a rigorous feature selection process, enabling us to retain only the most pertinent data while eliminating noise. Additionally, we conducted meticulous data cleaning and outlier removal to ensure the quality of our dataset.
+                                    Subsequent to the literature review, we proceeded with an extensive exploration of publicly 
+                                    available datasets related to the valuation of bare land. It's important to note that our foremost 
+                                    challenge at this stage was the absence of a comprehensive property price database. To overcome this 
+                                    problem, we implemented a web crawler to extract pricing information and property specifications 
+                                    (e.g., location, area) from real estate listing websites. Furthermore, we conducted geocoding to 
+                                    obtain latitude and longitude coordinates, thereby enriching our dataset with geographic attributes 
+                                    such as terrain and altitude. During the data distribution analysis, we identified a significant 
+                                    data concentration in the Southeast region of Brazil. We implemented a rigorous feature selection 
+                                    process, enabling us to retain only the most pertinent data while eliminating noise. Additionally, 
+                                    we conducted meticulous data cleaning and outlier removal to ensure the quality of our dataset.
                                 </p>
                                 <p class="text-muted-justified">
-                                    One key aspect of our analysis involved examining the correlation between the value of bare land and other features, such as prices of commodities such as soybeans, corn, and cattle. Over the period of our study, we observed a decrease in commodity prices throughout the year, accompanied by an increase in rural land prices. This negative correlation was not a suitable variable to serve as a reliable predictor in our model.
+                                    One key aspect of our analysis involved examining the correlation between the value of bare land 
+                                    and other features, such as prices of commodities such as soybeans, corn, and cattle. Over the 
+                                    period of our study, we observed a decrease in commodity prices throughout the year, accompanied 
+                                    by an increase in rural land prices. This negative correlation was not a suitable variable to serve 
+                                    as a reliable predictor in our model.
                                 </p>
                                 <p class="text-muted-justified">
-                                    In our pursuit of predicting rural property values using the chosen features, we conducted a series of experiments employing diverse machine learning methodologies. As a result, we attained outcomes that can be characterized as reasonably promising. Nevertheless, an important lesson that emerged from our endeavors was the necessity to enhance data quality and broaden data coverage nationwide. These enhancements are essential to elevate the precision of our predictive model.
+                                    In our pursuit of predicting rural property values using the chosen features, we conducted a series 
+                                    of experiments employing diverse machine learning methodologies. As a result, we attained outcomes 
+                                    that can be characterized as reasonably promising. Nevertheless, an important lesson that emerged 
+                                    from our endeavors was the necessity to enhance data quality and broaden data coverage nationwide. 
+                                    These enhancements are essential to elevate the precision of our predictive model.
                                 </p>
                                 <p class="text-muted-justified">
-                                    Furthermore, we deployed a Restful API to provide an interface for internal applications to access our model. This project was quite challenging due to the limited data we had to work with. My experience as a researcher was essential in helping us navigate and overcome the obstacles we faced. I'm incredibly proud of the dedication and hard work our team put into this project. e identificamos como principal ponto a ser melhorada a qualidade e a cobertura dos dados do país.
+                                    Furthermore, we deployed a Restful API to provide an interface for internal applications to access 
+                                    our model. This project was quite challenging due to the limited data we had to work with. My 
+                                    experience as a researcher was essential in helping us navigate and overcome the obstacles we faced. 
+                                    I'm incredibly proud of the dedication and hard work our team put into this project.
                                 </p>
                                 <button class="btn btn-primary" data-dismiss="modal" type="button"><i
                                         class="fas fa-times mr-1"></i>Close Project</button>
