--- a/index.html
+++ b/index.html
@@ -448,7 +448,7 @@
                             <h4 class="text-uppercase m-0">Address</h4>
                             <hr class="my-4">
                             <div class="small text-black-50">
-                                <h5>São Luís, Maranhão, Brazil</h5>
+                                <h5>Surrey, British Columbia, Canada</h5>
                             </div>
                         </div>
                     </div>
