--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                         My strong interests are in software engineering, data science, machine learning, and data engineering.
                     </p>
                     <p class="text-muted-justified">
-                        Currently, I work as Data Science Manager at <a class="link" target="_blank"
+                        Currently, I work as Senior Data Scientist, and Manager at <a class="link" target="_blank"
                             href="https://www.seedz.ag/">Seedz</a>, a Vertical SaaS to connect and optimize the agribusiness ecosystem.
                     </p>
                 </div>
