--- a/index.html
+++ b/index.html
@@ -284,7 +284,25 @@
                 <h3 class="section-subheading text-muted">Below are a few of my notebooks.</h3>
             </div>
             
-            <div class="row">                
+            <div class="row">
+                <div class="col-lg-4 col-sm-6 mb-4">
+                    <div class="portfolio-item">
+                        <a class="portfolio-link" target="_blank" href="https://github.com/andrelbd1/BC_Service_Analysis">
+                            <div class="portfolio-hover">
+                                <div class="portfolio-hover-content">
+                                    <h3>Open Notebook</h3>
+                                </div>
+                            </div>
+                            <img class="img-fluid" src="assets/img/analyses/bc_service/logo.jpg" alt="" />
+                        </a>
+                        <div class="portfolio-caption">
+                            <div class="portfolio-caption-heading">BC Service</div>
+                            <div class="portfolio-caption-subheading text-muted"><b>Data Science</b></div>
+                            <div class="portfolio-caption-subheading text-muted">python, pandas, numpy, matplotlib, seaborn, looker</div>
+                        </div>
+                    </div>
+                </div>
+
                 <div class="col-lg-4 col-sm-6 mb-4">
                     <div class="portfolio-item">
                         <a class="portfolio-link" target="_blank" href="https://htmlpreview.github.io/?https://github.com/andrelbd1/teaching-data-science/blob/master/11.%20Practice%20-%20Consumers%20Complaints.html">
