Adding GitHub repo to Eduvis

--- a/index.html
+++ b/index.html
@@ -931,6 +931,9 @@
                                                 href="https://www.researchgate.net/publication/335840428_What_Can_Be_Found_from_Student_Interaction_Logs_of_Online_Courses_Offered_in_Brazil">Paper 4</a>
                                         
                                     </li>
+                                    <li>Repository: <a class="link" target="_blank"
+                                            href="https://github.com/andrelbd1/eduvis">GitHub</a>
+                                    </li>
                                 </ul>
 
                                 <button class="btn btn-primary" data-dismiss="modal" type="button"><i
